# chess-trainer

./: Cargo.toml  README.md  index.html
data/: stafford.pgn
src/: components.rs  main.rs  pgn.rs  pgn_lexer.rs  trainer.rs  util.rs
src/components/: board.rs  iconbutton.rs
src/pgn/: lexer.rs  movetree.rs  tree.rs  variations.rs
styles/: board.scss  style.scss  switch.scss
