[package]
name = "chess-trainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oneshot = "0.5.0"
futures-micro = "0.5.0"
gloo-console = "0.1.0"
nom = "7.0.0"
pin-project-lite = "0.2.7"
shakmaty = "0.19.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.26"
web-sys = "0.3.53"
yew = "0.18"
rand = "0.8.4"
getrandom = { version="0.2.3", features=["js"] }