[package]
name = "chess-trainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.1.0"
nom = "7.0.0"
shakmaty = "0.19.0"
rand = "0.8.4"
getrandom = { version="0.2.3", features=["js"] }
qcell = "0.4.2"
dioxus = "0.3.1"
dioxus-web = "0.3.1"
by_address = "1.1.0"
futures-util = "0.3.26"
pin-project-lite = "0.2.9"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
async-oneshot = "0.5.0"
